title visibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1, h2, h3 {
     text-align: center;
     text-decoration: none;
     color: rgba(0, 136, 255, 1);
-    text-shadow: 0 0 2px mintcream; 
+    text-shadow: 0 0 2px #020024; 
     font-size: 3rem;
 }
 
